Robustify kicking off an AVRG during server startup * Distinguish between agent destruction during launch and after launch * For launch errors, pass in the error to the game observer * When sticking a fork in the AVRG, use the error type to determine whether the user code failed or if the bureau launch failed (this is the case during the server initialization sequence) and report a different error message * Also avoid shutting down inactive agents (should prevent "Agent not found" log warnings)

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -169,3 +169,6 @@ e.unwatchable_game = Your friend is playing an unwatchable game.
 e.no_longer_lobbying = Your friend is no longer sitting at a pending game table.
 e.game_in_progress = Your friend's game has already started.
 e.game_table_full = Your friend's game table is full.
+
+e.agent_error = The game's server code could not be started.
+e.game_server_not_ready = The game server is still starting up. Try again in a minute.
