Tour popup UI changes + tooltips on the stars.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -357,3 +357,11 @@ m.avatar_intro = You start life as a Happy piece of Tofu. If you want to \
 #
 # Home page dialog messages
 t.home_page = My Whirled Places
+
+#
+# Stars
+i.star0 = Awful
+i.star1 = Poor
+i.star2 = Average
+i.star3 = Good
+i.star4 = Excellent
