--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -18,6 +18,7 @@ l.recent_scenes = Recent scenes
 t.tour = Whirled Tour
 b.start_tour = Take the Whirled Tour!
 l.tour = Whirled\nTour:
+l.tour_rate = Rate this room:
 b.tour_next = Next room
 e.toured_out = Sorry, there are no more rooms in the Whirled Tour. Try again in a minute.
 e.already_touring = You're already on the Whirled Tour.
