--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -80,6 +80,9 @@ l.default_table = {0}'s game
 l.guest_flow_title = You Earned {0} Coins!
 l.guest_flow_note = If you sign up now, you can keep it and buy cool stuff!
 l.guest_flowprog_note = Sign up! Save your game progress! Keep your coins!
+l.guest_flow_note_1 = Sign up to earn trophies and track your high scores! 
+l.guest_flow_note_2 = Sign up now and make more friends to play with!
+l.guest_flow_note_3 = Sign up now to keep your coins and buy cool stuff!
 
 t.gameOver = Game Over
 b.allGames = All Games
