Warp -> Go member -> player

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -184,8 +184,8 @@ b.open_channel = Start private chat
 b.mute = Mute player
 b.unmute = Unmute player
 b.visit_home = Visit home
-b.view_member = View member profile
-b.visit_member = Warp to member's location
+b.view_member = View player profile
+b.visit_member = Go to player's location
 l.add_as_friend = Invite to be your friend
 
 i.play_game = Play '{0}'
