Oh baby, image editing in the upload interface. Pretty much done.
Except!
- The html popup is coming up too big, causing scrollbars.
- I need to once again try tackling the camera size weirdness bug.
- The white background behind the choice popup is so bland.
- Hmm, maybe I should just have two buttons in the html:
  edit and create new. Because right now it asks in a popup
  and it's a little weird when you can't see the image it's
  asking about anymore...

Extra bonus points:
- Replace the html form field with a new flash uploader, so
  that we can show a progress bar. We need a progress bar,
  that's always bothered me about item uploading.

--- a/rsrc/en_US/i18n/image.properties
+++ b/rsrc/en_US/i18n/image.properties
@@ -11,6 +11,11 @@
 # e.foo = error
 # x.foo = optional translation that may or may not be present
 
+# ImageControlOptions
+t.options = Image editing options
+b.edit_image = Edit existing image
+b.new_image = Create new image
+b.camera = Take a snapshot with your webcam
 
 # CameraSnapshotControl
 t.camera = Capture from Camera
