Per Daniel, don't always pop up the publish panel. Instead add buttons to the bottom of the room editor panel: don't publish and publish. Moved the publish panel to the editor package. We still need the publish popup, because that takes the snapshot after editing and we need to wait for another user click after it's encoded and ready to be uploaded because of a flash 10 security hoop.

--- a/rsrc/en_US/i18n/editing.properties
+++ b/rsrc/en_US/i18n/editing.properties
@@ -14,13 +14,13 @@
 #
 # PublishPanel
 t.publish = Publish this room
-m.publish = Publish your room when you are finished editing and ready to have it rated \
-  and submitted to the Whirled tour. The preview snapshot will be updated.
+m.publish = Publishing this room will update the preview snapshot and publicize it \
+  on the Whirled Tour.
 m.publish_private = Note: this room is not publicly available. You may still publish it \
   but it will not be part of the Whirled Tour. If you would like to change this, \
   return to the editor and change the access controls using the lock buttons.
 b.publish = Publish
-b.publish_cancel = Don't publish
+b.end_editing = End editing; don't publish
 
 # in-room editor
 
