Added a pref to turn off autoshowing the "home page grid". It does not presently suppress the friends list from popping up, just the grid.

--- a/rsrc/en_US/i18n/homepagegrid.properties
+++ b/rsrc/en_US/i18n/homepagegrid.properties
@@ -25,3 +25,5 @@ b.earn_badge = {1}
 
 # text to play a game
 b.play_game = Play {0}
+
+b.autoshow = Show this dialog automatically when you enter whirled.
