--- a/rsrc/en_US/i18n/notify.properties
+++ b/rsrc/en_US/i18n/notify.properties
@@ -12,8 +12,8 @@
 # x.foo = optional translation that may or may not be present
 
 m.friend_online = [{0}|command://ViewMember/{1}] logged on. [Visit|command://VisitMember/{1}].
-m.friend_added = [{0}|command://ViewMember/{1}] is now your friend! \
-[Visit|command://VisitMember/{1}].
+m.friend_added = [{0}|command://ViewMember/{1}] is now your friend!
+m.friend_visit = [Visit|command://VisitMember/{0}].
 m.friend_removed = You are no longer friends with [{0}|command://ViewMember/{1}].
 m.invite_accepted = {0} just accepted your invitation! Your friend's display name is \
 [{1}|command://ViewMember//{2}].
