More work on creating a party.

--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -21,3 +21,9 @@ b.leave = Leave
 
 t.create = Create a new party
 b.create = Create party
+
+e.party_need_group = You must be a member of a group to start a party.
+
+l.name = Party name:
+l.group = Host group:
+m.default_name = {0}'s party
