--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -14,16 +14,17 @@
 # e.foo = error
 # x.foo = optional translation that may or may not be present
 
+# Party board
 t.board = Party board
+b.create = Create party
 
+# Party popup
 t.party = My party
 b.leave = Leave
 
+# Party create
 t.create = Create a new party
-b.create = Create party
-
 e.party_need_group = You must be a member of a group to start a party.
-
 l.name = Party name:
 l.group = Host group:
 m.default_name = {0}'s party
