Added MsoyContext.chatErrHandler(), which generates an error handling function for use with Invocation adapters.

--- a/rsrc/en_US/i18n/editing.properties
+++ b/rsrc/en_US/i18n/editing.properties
@@ -170,7 +170,7 @@ m.group = group
 
 # msgs related to adding furni from javascript
 e.no_permission = You are unable to edit this room.
-e.failed_to_remove = Removal from old location failed.
+e.failed_to_remove = Removal from old location failed: {0}
 t.item_used = Item already in use...
 b.item_used_yes = Yes
 b.item_used_no = No
