--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -17,10 +17,14 @@
 # Party board
 t.board = Party board
 b.create = Create party
+b.join = Join
+
+e.no_such_party = That party is no longer around.
 
 # Party popup
 t.party = My party
 b.leave = Leave
+b.boot_peep = Boot
 
 # Party create
 t.create = Create a new party
