--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -24,11 +24,12 @@ e.no_such_party = That party is no longer around.
 # Party popup
 t.party = My party
 b.leave = Leave
-b.boot_peep = Boot
+b.boot = Boot from party
 
 # Party create
 t.create = Create a new party
 e.party_need_group = You must be a member of a group to start a party.
 l.name = Party name:
 l.group = Host group:
+l.invite_friends = Invite all friends:
 m.default_name = {0}'s party
