Show a little more info for each party on the board. Prettification to come.

--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -18,6 +18,7 @@
 t.board = Party board
 b.create = Create party
 b.join = Join
+l.population = {0} members
 
 e.no_such_party = That party is no longer around.
 
