Put help messages for the WORLD in the world.properties. Created a new scoping letter "h" for help translations

--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -10,6 +10,7 @@
 # i.foo = tooltip (info)
 # e.foo = error
 # x.foo = optional translation that may or may not be present
+# h.foo = help message
 
 l.recent_scenes = Recent scenes
 
@@ -42,3 +43,6 @@ m.snap_download_progress = Downloading...
 e.snap_upload = Upload failed: {0}
 e.snap_download = Download failed: {0}
 m.sceneItemName = Snapshot: {0}
+
+# Room sharing
+h.room_share = Click here to share your room outside Whirled.
