Added h.foo comment to all properties files to increase the chances of future consistency

--- a/rsrc/en_US/i18n/item.properties
+++ b/rsrc/en_US/i18n/item.properties
@@ -9,6 +9,7 @@
 # t.foo = title
 # i.foo = tooltip (info)
 # e.foo = error
+# h.foo = help message
 # x.foo = optional translation that may or may not be present
 
 t.inventory = Inventory
