--- a/rsrc/en_US/i18n/studio.properties
+++ b/rsrc/en_US/i18n/studio.properties
@@ -3,6 +3,7 @@
 # PREFIX KEY
 # m.foo = message
 # e.foo = error
+# h.foo = help message
 # l.foo = label (a message that is completed using a UI element)
 # b.foo = button
 # i.foo = tooltip (info)
