--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -9,6 +9,7 @@
 # t.foo = title
 # i.foo = tooltip (info)
 # e.foo = error
+# h.foo = help message
 # x.foo = optional translation that may or may not be present
 
 m.invite_received = You have received a game invitation from {0}.
