--- a/rsrc/en_US/i18n/notify.properties
+++ b/rsrc/en_US/i18n/notify.properties
@@ -9,6 +9,7 @@
 # t.foo = title
 # i.foo = tooltip (info)
 # e.foo = error
+# h.foo = help message
 # x.foo = optional translation that may or may not be present
 
 m.friend_online = [{0}|command://ViewMember/{1}] logged on. [Visit|command://VisitMember/{1}].
