--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -12,6 +12,7 @@
 # t.foo = title
 # i.foo = tooltip (info)
 # e.foo = error
+# h.foo = help message
 # x.foo = optional translation that may or may not be present
 
 # Party board
