--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -19,7 +19,8 @@
 t.board = Party board
 b.create = Create party
 b.join = Join
-l.population = {0} members
+l.population.1 = {0} member
+l.population.n = {0} members
 
 e.no_such_party = That party is no longer around.
 
