--- a/rsrc/en_US/i18n/notify.properties
+++ b/rsrc/en_US/i18n/notify.properties
@@ -31,6 +31,7 @@ m.profile_commented = Your [profile|command://ViewMember/{0}] has received a com
 m.item_commented = The {0} [{1}|command://ViewCommentedItem/{2}/{3}] has received a comment.
 m.friend_name_changed = "[{0}|command://ViewMember/{1}]" is {2}'s new name.
 m.friend_status_changed = [{0}|command://ViewMember/{1}] {2}.
+m.party_invite = Party invite: [{2}|command://JoinParty/{3}] from [{0}|command://ViewMember/{1}].
 
 m.money_gained = You have gained {0}.
 m.money_lost = {0} have been deducted.
