Added "invite to party" by clicking on a player's avatar.

--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -36,3 +36,6 @@ l.name = Party name:
 l.group = Host group:
 l.invite_friends = Invite all friends:
 m.default_name = {0}'s party
+
+# Avatar popup menu items
+b.invite_member = Invite to party
