--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -28,9 +28,9 @@ e.no_such_party = That party is no longer around.
 t.party = My party
 b.leave = Leave
 b.boot = Boot from party
-l.recruitment_open = Open
-l.recruitment_closed = Closed
-l.recruitment_group = Group
+l.recruitment_0 = Open
+l.recruitment_1 = Closed
+l.recruitment_2 = Group
 
 # Party create
 t.create = Create a new party
