Automatically set the status when the party moves. User-set statuses are tainted on the server.

--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -31,6 +31,7 @@ b.boot = Boot from party
 l.recruitment_0 = Open
 l.recruitment_1 = Closed
 l.recruitment_2 = Group
+m.status_room = Chillin' in {0}
 
 # Party create
 t.create = Create a new party
