--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -28,9 +28,9 @@ e.no_such_party = That party is no longer around.
 t.party = My party
 b.leave = Leave
 b.boot = Boot from party
-l.recruitment_0 = Open
-l.recruitment_1 = Closed
-l.recruitment_2 = Group
+l.recruit_0 = Open
+l.recruit_1 = Closed
+l.recruit_2 = Group
 m.status_room = Chillin' in {0}
 
 # Party create
