Add a "transfer leadership" option to pass the buck.

--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -28,6 +28,7 @@ e.no_such_party = That party is no longer around.
 t.party = My party
 b.leave = Leave
 b.boot = Boot from party
+b.assign_leader = Transfer leadership
 l.recruit_0 = Open
 l.recruit_1 = Closed
 l.recruit_2 = Group
