New a/b test for the coins awarded game upsell for guests.  Testing winning msg vs "about whirled" msg vs rotating msg.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -79,11 +79,12 @@ i.table = Your table's name is displayed in the lobby
 l.default_table = {0}'s game
 
 l.guest_flow_title = You Earned {0} Coins!
-l.guest_flow_note = If you sign up now, you can keep it and buy cool stuff!
-l.guest_flowprog_note = Sign up! Save your game progress! Keep your coins!
-l.guest_flow_note_1 = Sign up to earn trophies and track your high scores! 
-l.guest_flow_note_2 = Sign up now and make more friends to play with!
-l.guest_flow_note_3 = Sign up now to keep your coins and buy cool stuff!
+l.guest_flow_note = Sign up now to keep your coins and buy cool stuff!
+l.guest_flowprog_note = Sign up now to save your progress, keep your coins and buy cool stuff!
+l.guest_flow_whirled_note = Join Whirled; a free virtual world with cool stuff to buy! 
+l.guest_flow_rotate_note_0 = Sign up now to keep your coins and buy cool stuff!  It's free! 
+l.guest_flow_rotate_note_1 = Join now to keep track of what your friends are playing!
+l.guest_flow_rotate_note_2 = Register to earn trophies and track your high scores! 
 
 t.gameOver = Game Over
 b.allGames = All Games
