When I'm puzzled because something's different on dev, it might be because I forgot to ever check it in.

--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -32,7 +32,7 @@ b.assign_leader = Transfer leadership
 l.recruit_0 = Open
 l.recruit_1 = Closed
 l.recruit_2 = Group
-m.status_room = Chillin' in {0}
+m.status_room = In {0}
 
 # Party create
 t.create = Create a new party
