Enable parties (beta) for the release.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -89,7 +89,7 @@ i.comment = Comment or rate this place
 i.instructions = Game instructions
 i.tickButton = Reset
 i.avrg = View game options
-i.party = Party party party!
+i.party = Parties! (BETA)
 i.homePageGrid = View your Whirled Places
 i.music = View the currently playing music
 
