Implemented party detail requests. These aren't modal, so I restrict you to one request for detail per party at a time, and track the detail dialogs that open and ensure that only one is up for each party. If you join a party, all open detail dialogs are closed.

--- a/rsrc/en_US/i18n/notify.properties
+++ b/rsrc/en_US/i18n/notify.properties
@@ -31,7 +31,8 @@ m.profile_commented = Your [profile|command://ViewMember/{0}] has received a com
 m.item_commented = The {0} [{1}|command://ViewCommentedItem/{2}/{3}] has received a comment.
 m.friend_name_changed = "[{0}|command://ViewMember/{1}]" is {2}'s new name.
 m.friend_status_changed = [{0}|command://ViewMember/{1}] {2}.
-m.party_invite = Party invite: [{2}|command://JoinParty/{3}] from [{0}|command://ViewMember/{1}].
+m.party_invite = Party invite: [{2}|command://JoinParty/{3}] from \
+[{0}|command://ViewMember/{1}]. [Details|command://GetPartyDetail/{3}].
 m.party_left = You have left the party. [Rejoin|command://JoinParty/{0}].
 
 m.money_gained = You have gained {0}.
