- Added a Group setting that controls who may start parties:   member (default) or manager. - Cleaned out some old 'background' stuff in GroupRecord,   there was a TODO to do so. - Honor this new setting. Unfortunately we don't presently   know on the client which of your groups will reject you...

--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -21,6 +21,7 @@ b.create = Create party
 b.join = Join
 
 e.no_such_party = That party is no longer around.
+e.group_mgr_req = That group requires that you be a manager. Try another.
 
 # Party popup
 b.leave = Leave
