When the party is closed, prevent non-leaders from issuing invitations. I wonder what we should do about group membership? Currently we let anyone invite anyone to a group-only party, but you may get rejected when you try to click the invite. Bleah.

--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -22,6 +22,8 @@ b.join = Join
 
 e.no_such_party = That party is no longer around.
 e.group_mgr_req = That group requires that you be a manager. Try another.
+e.party_full = That party is full.
+e.cant_invite_closed = Only the leader may issue invites to a closed party.
 
 # Party popup
 b.leave = Leave
