--- a/rsrc/en_US/i18n/homepagegrid.properties
+++ b/rsrc/en_US/i18n/homepagegrid.properties
@@ -27,4 +27,4 @@ b.earn_badge = {1}
 # text to play a game
 b.play_game = Play {0}
 
-b.autoshow = Show this dialog automatically when you enter whirled.
+b.autoshow = Show this dialog automatically when you enter Whirled.
