- Made notification methods public on the director. - Notify with id3 tags when music is playing. Let's try it.   Maybe it's annoying. I don't know.   My test file has two id3 tags, which causes the notification to display twice.   I can suppress that if it's a widespread problem...

--- a/rsrc/en_US/i18n/notify.properties
+++ b/rsrc/en_US/i18n/notify.properties
@@ -34,6 +34,7 @@ m.friend_status_changed = [{0}|command://ViewMember/{1}] {2}.
 m.party_invite = Party invite: [{2}|command://JoinParty/{3}] from \
 [{0}|command://ViewMember/{1}]. [Details|command://GetPartyDetail/{3}].
 m.party_left = You have left the party. [Rejoin|command://JoinParty/{0}].
+m.song = Now playing: "{0}" by "{1}".
 
 m.money_gained = You have gained {0}.
 m.money_lost = {0} have been deducted.
