More tightening, in preparation for adding some Awesome to the publish panel.

--- a/rsrc/en_US/i18n/editing.properties
+++ b/rsrc/en_US/i18n/editing.properties
@@ -14,14 +14,12 @@
 
 #
 # PublishPanel
+
 t.publish = Publish this room
-m.publish = Publishing this room will update the preview snapshot and publicize it \
-  on the Whirled Tour.
-m.publish_private = Note: this room is not publicly available. You may still publish it \
-  but it will not be part of the Whirled Tour. If you would like to change this, \
-  return to the editor and change the access controls using the lock buttons.
+m.publish = Update the preview snapshot and show this room on the Whirled Tour.
+m.publish_private = Update the preview snapshot and post it to your friends' feeds.
 b.publish = Publish
-b.end_editing = End editing; don't publish
+b.end_editing = Done; don't publish
 
 # in-room editor
 
