Added support for emailing a snapshot of your room as a postcard to someone. Currently this is offered when you publish your room, I plan to put it on the snapshot dialog as well, but need to wire up all the bits so that we can get the URL of the generated snapshot image and submit that for sending.
Also, the email needs some sprucing up. Nothing crazy, but some sort of
postcardy-looking border (ideally achieved entirely with CSS) would be groovy.

--- a/rsrc/en_US/i18n/editing.properties
+++ b/rsrc/en_US/i18n/editing.properties
@@ -13,15 +13,7 @@
 # x.foo = optional translation that may or may not be present
 
 #
-# PublishPanel
-
-t.publish = Publish this room
-m.publish = Update the preview snapshot and show this room on the Whirled Tour.
-m.publish_private = Update the preview snapshot and post it to your friends' feeds.
-b.publish = Publish
-b.end_editing = Done; don't publish
-
-# in-room editor
+# RoomEditorPanel
 
 t.editor_title = Arranging Room:
 t.editing_no_name = (unnamed item)
@@ -167,7 +159,22 @@ m.room_created_in_editor = Room created. Please select it from the list.
 m.personal = personal
 m.group = group
 
+#
+# PublishPanel
+
+t.publish = Publish this room
+
+m.publish = Updates the preview snapshot and shows this room on the Whirled Tour.
+m.publish_private = Updates the preview snapshot and posts it to your friends' feeds.
+
+l.publish_postcard = Send this room as a postcard to your friends!
+
+b.publish = Publish
+b.end_editing = Done; don't publish
+
+#
 # msgs related to adding furni from javascript
+
 e.no_permission = You are unable to edit this room.
 e.failed_to_remove = Removal from old location failed: {0}
 t.item_used = Item already in use...
