--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -1,4 +1,7 @@
-# "world" metasoy properties
+#
+# $Id$
+#
+# "world" translation messages
 #
 # PREFIX KEY
 # m.foo = message
@@ -16,6 +19,7 @@ l.recent_scenes = Recent scenes
 
 #
 # Whirled Tour
+
 t.tour = Whirled Tour
 b.start_tour = Take the Whirled Tour!
 l.tour = Whirled\nTour:
@@ -24,8 +28,9 @@ b.tour_next = Next room
 e.toured_out = Sorry, there are no more rooms in the Whirled Tour. Try again in a minute.
 e.already_touring = You're already on the Whirled Tour.
 
+#
+# Room Snapshots
 
-# Snapshots
 t.snap = Room snapshot
 b.snap_gallery = Add to 'My Images'
 m.snap_save_opts = Select destination(s)
@@ -44,5 +49,27 @@ e.snap_upload = Upload failed: {0}
 e.snap_download = Download failed: {0}
 m.sceneItemName = Snapshot: {0}
 
+#
 # Room sharing
+
 h.room_share = Click here to share your room outside Whirled.
+
+#
+# RoomPostcardPanel
+
+t.rpc = Send this Room as a Postcard
+l.rpc_to = To:
+l.rpc_subject = Subject:
+l.rpc_cc = Cc:
+l.rpc_cc_check = Send a copy to my email
+l.rpc_caption = Caption:
+b.rpc_send = Send
+
+m.rpc_def_subject = Wish you were here!
+m.rpc_def_caption = Come on in, the water's great!
+
+e.rpc_enter_email = Please enter one or more email addresses in the To: box.
+e.rpc_invalid_addr = Is '{0}' a real email address?
+e.rpc_enter_subject = Please enter a Subject for your postcard message.
+m.rpc_sending = Sending...
+m.rpc_sent = Your postcard has been sent. Thanks for sharing!
