Allow sending a full snapshot as a postcard.

--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -35,6 +35,7 @@ t.snap = Room snapshot
 b.snap_gallery = Add to 'My Images'
 m.snap_save_opts = Select destination(s)
 b.snap_download = Download to my computer
+b.snap_postcard = Send as a postcard to my friends
 b.snap_scene_thumbnail = Use as room preview
 b.snap_occs = Include occupants?
 b.snap_chat = Include chat?
