More layout fiddling, added a simple tip until I can get something fancier working for the To: field.

--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -60,6 +60,7 @@ h.room_share = Click here to share your room outside Whirled.
 
 t.rpc = Send this Room as a Postcard
 l.rpc_to = To:
+t.rpc_to = Enter one or more email addresses above: foo@bar.com, bif@baz.com
 l.rpc_subject = Subject:
 l.rpc_cc = Cc:
 l.rpc_cc_check = Send a copy to my email
