Give all games a game menu, not just AVRGs. This allows us to nix the instructions button, and we can put rematch and play again in here, to simplify simplify simplify!
Still need to change the icon to be the game's icon for non-AVR games.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -86,9 +86,8 @@ i.notifications_avail = Click to view new notifications
 i.channel = Chat with friends and groups
 i.share = Share or embed this place
 i.comment = Comment or rate this place
-i.instructions = Game instructions
 i.tickButton = Reset
-i.avrg = View game options
+i.game = Game options
 i.party = Parties! (BETA)
 i.homePageGrid = View your Whirled Places
 i.music = View the currently playing music
@@ -255,12 +254,12 @@ m.stub_share = Download a SWF that links directly to this room! This is \
  will allow direct uploading of media.
 b.stub_share = Download SWF
 
-# AVRG menu
-b.avrgExit = Exit game
-b.avrgInstructions = Instructions
-b.avrgInvite = Invite friends to play
-b.avrgComment = Comment
-b.avrgTrophies = Trophies
+# Game menu
+b.gameExit = Exit game
+b.gameInstructions = Instructions
+b.gameInvite = Invite friends to play
+b.gameComment = Comment
+b.gameTrophies = Trophies
 
 # Problems with urls
 e.no_navigate = Unable to load requested page: {0}
