--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -250,24 +250,25 @@ m.share_email_sent = Email sent. Thanks for sharing!
 
 t.stub_share = Get a SWF
 m.stub_share = Download a SWF that links directly to this room! This is \
- for use on sites like deviantArt that won't let you post embed code but \
- will allow direct uploading of media.
+  for use on sites like deviantArt that won't let you post embed code but \
+  will allow direct uploading of media.
 b.stub_share = Download SWF
 
 # Game menu
 b.gameExit = Exit game
 b.gameInstructions = Instructions
-b.gameInvite = Invite friends to play
+b.gameGroup = Game's Group
 b.gameComment = Comment
 b.gameTrophies = Trophies
+b.gameInvite = Invite friends to play
 
 # Problems with urls
 e.no_navigate = Unable to load requested page: {0}
 t.missedUrl = Unable to navigate to URL
 m.missedUrl = Sorry, we're unable to load the requested page directly. \
-This happens when whirled is embedded on myspace or other sites that \
-restrict this ability. Please copy the URL to the address bar of your \
-browser to proceed.
+  This happens when whirled is embedded on myspace or other sites that \
+  restrict this ability. Please copy the URL to the address bar of your \
+  browser to proceed.
 
 # Away related messages
 t.backFromAway = You are away from the keyboard.
