Move game menu creation into the GameDirector which allows us to take a bunch of crap out of Msoy and WorldController that they have no business knowing about. Nixed the game shop link from the Go menu (and game group link), added a game shop link to the game menu (game group link was already there).

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -156,6 +156,17 @@ t.players = Player list
 i.scores = View scores
 
 #
+# Game ControlBar menu
+
+b.gameInstructions = Instructions
+b.gameGroup = Game's Group
+b.gameShop = Game's Shop
+b.gameComment = Comment
+b.gameTrophies = Trophies
+b.gameInvite = Invite friends to play
+b.gameExit = Exit game
+
+#
 # Errorz!
 
 e.game_error = Game error: {0}
