In-Flash trophy display. Forthcoming: a way to show this via GameControl so that games can pimp their own trophies.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -167,6 +167,14 @@ b.gameInvite = Invite friends to play
 b.gameExit = Exit game
 
 #
+# TrophyPanel
+
+t.trophy = Trophies
+m.tp_title = Trophies awarded by {0}
+m.tp_title_none = {0} awards no trophies. Lame!
+m.tp_secret = You must earn this trophy in the game to see its description.
+
+#
 # Errorz!
 
 e.game_error = Game error: {0}
