Log guests off after 7 minutes of inactivity.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -35,6 +35,7 @@ m.warning_close_in = Can close in... {0}
 
 # Common aslib translations
 m.lost_connection = The connection to the server was lost.
+m.idle_logoff = You have been logged off for being inactive.
 m.logon_failed = Logon failed: {0}
 m.network_error = Could not connect to server.
 m.server_error = An unexpected error occurred on the server.
