--- a/rsrc/en_US/i18n/editing.properties
+++ b/rsrc/en_US/i18n/editing.properties
@@ -17,7 +17,8 @@
 
 t.editor_title = Arranging Room:
 t.editing_no_name = (unnamed item)
-l.decor = Backdrop:
+m.decor = Backdrop: {0}
+m.music = Music: {0}
 l.select_item = Select an item...
 l.entrance = Room entrance
 l.new_furni = Add furniture...
