--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -20,8 +20,9 @@ t.board = Party board
 b.create = Create party
 b.join = Join
 m.no_parties = No parties. Create your own or check back later.
-m.about = Parties are groups of people that hang out and do fun stuff together. \
-  <a href='event:http://wiki.whirled.com/Party'>More info</a>.
+m.about = Parties are groups of people that hang out and do fun stuff together.
+b.wiki = More Info.
+u.wiki = http://wiki.whirled.com/Party
 
 e.no_such_party = That party is no longer around.
 e.group_mgr_req = That group requires that you be a manager. Try another.
