Brevify and actionate.

--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -20,7 +20,7 @@ t.board = Party board
 b.create = Create party
 b.join = Join
 m.no_parties = No parties. Create your own or check back later.
-m.about = Parties are groups of people that hang out and do fun stuff together.
+m.about = Hang out and do fun stuff with other people in parties!
 b.wiki = More Info.
 u.wiki = http://wiki.whirled.com/Party
 
