Improved some feedback, cleaned up some error handling and edge cases.

--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -27,7 +27,10 @@ u.wiki = http://wiki.whirled.com/Party
 e.no_such_party = That party is no longer around.
 e.group_mgr_req = That group requires that you be a manager. Try another.
 e.party_full = That party is full.
+e.party_closed = That party is no longer open.
 e.cant_invite_closed = Only the leader may issue invites to a closed party.
+
+e.lost_party = Lost connection to party server: {0}
 
 # Party popup
 b.leave = Leave
