--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -20,9 +20,8 @@ t.board = Party board
 b.create = Create party
 b.join = Join
 m.no_parties = No parties. Create your own or check back later.
-m.about = Hang out and do fun stuff with other people in parties!
-b.wiki = More Info.
-u.wiki = http://wiki.whirled.com/Party
+m.about = Hang out, meet new people, and travel around Whirled together in parties. \
+ <a href="event:http://wiki.whirled.com/Party"><u>More Info</u></a>.
 
 e.no_such_party = That party is no longer around.
 e.group_mgr_req = That group requires that you be a manager. Try another.
