--- a/rsrc/en_US/i18n/party.properties
+++ b/rsrc/en_US/i18n/party.properties
@@ -21,7 +21,7 @@ b.create = Create party
 b.join = Join
 m.no_parties = No parties. Create your own or check back later.
 m.about = Hang out, meet new people, and travel around Whirled together in parties. \
- <a href="event:http://wiki.whirled.com/Party"><u>More Info</u></a>.
+ <a href="event:http://wiki.whirled.com/Party"><u>More info</u></a>.
 
 e.no_such_party = That party is no longer around.
 e.group_mgr_req = That group requires that you be a manager. Try another.
