Ask permaguests to name themselves when they get into a room, work in progress.

--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -73,3 +73,18 @@ e.rpc_invalid_addr = Is '{0}' a real email address?
 e.rpc_enter_subject = Please enter a Subject for your postcard message.
 m.rpc_sending = Sending...
 m.rpc_sent = Your postcard has been sent. Thanks for sharing!
+
+#
+# Guest welcome
+
+t.guest_welcome = Welcome to Whirled!
+p.guest_intro = Please enter your name or create an account.
+b.guest_set_name = Set Name
+b.guest_save_account = Save Account
+m.guest_sample0 = Anonymouse
+m.guest_sample1 = Lurker
+m.guest_sample2 = Tepid
+m.guest_sample3 = Stealthy
+m.guest_sample4 = Mouse
+m.guest_sample5 = Timid
+m.guest_sample6 = Lukewarm
