Item flagging from within the flash client. Not quite done, checkpointing.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -117,6 +117,7 @@ b.remove_furni = Remove from room
 b.edit_furni = Move or resize
 b.edit_furni_ok = OK
 b.view_item = View {0} item info...
+b.flag_item = Report {0} item...
 b.bleep_item = Bleep {0} item.
 b.unbleep_item = Unbleep {0} item.
 b.config_item = Configure {0} item
