--- a/rsrc/en_US/i18n/item.properties
+++ b/rsrc/en_US/i18n/item.properties
@@ -44,3 +44,10 @@ m.default = <Default>
 m.not_listed = That {0} item is not listed in the shop.
 
 e.no_such_item = That item does not exist.
+
+# FlagItemDialog
+t.flag = Flag an item
+m.flag = Mark this item as being a violation of Whirled standards. The item will \
+ be reviewed by an agent.
+l.flag_kind = Flag as:
+l.flag_comment = Comment:
