Clean this dialog up a bit.

--- a/rsrc/en_US/i18n/item.properties
+++ b/rsrc/en_US/i18n/item.properties
@@ -47,7 +47,7 @@ e.no_such_item = That item does not exist.
 
 # FlagItemDialog
 t.flag = Flag an item
-m.flag = Mark this item as being a violation of Whirled standards. The item will \
- be reviewed by an agent.
+m.flag = Mark this {0} item as being a violation of Whirled standards. An agent will \
+ review your report and take appropriate action.
 l.flag_kind = Flag as:
 l.flag_comment = Comment:
