--- a/rsrc/en_US/i18n/item.properties
+++ b/rsrc/en_US/i18n/item.properties
@@ -49,5 +49,8 @@ e.no_such_item = That item does not exist.
 t.flag = Flag an item
 m.flag = Mark this {0} item as being a violation of Whirled standards. An agent will \
  review your report and take appropriate action.
+p.flag_kind = <Select>
 l.flag_kind = Flag as:
 l.flag_comment = Comment:
+m.flag_reported = Your report has been filed. Thank you.
+e.item_already_flagged = You have already flagged this item.
