Simplified naming of permaguests, implemented the setting of names using existing setDisplayName (this is buggy, investigating)

--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -78,13 +78,7 @@ m.rpc_sent = Your postcard has been sent. Thanks for sharing!
 # Guest welcome
 
 t.guest_welcome = Welcome to Whirled!
-p.guest_intro = Please enter your name or create an account.
+p.guest_intro = You are a guest, please enter a name to use while playing, or save your account.
 b.guest_set_name = Set Name
 b.guest_save_account = Save Account
-m.guest_sample0 = Anonymouse
-m.guest_sample1 = Lurker
-m.guest_sample2 = Tepid
-m.guest_sample3 = Stealthy
-m.guest_sample4 = Mouse
-m.guest_sample5 = Timid
-m.guest_sample6 = Lukewarm
+m.guest_name = Coward {0}
