--- a/rsrc/en_US/i18n/item.properties
+++ b/rsrc/en_US/i18n/item.properties
@@ -48,7 +48,8 @@ e.no_such_item = That item does not exist.
 # FlagItemDialog
 t.flag = Flag an item
 m.flag = Mark this {0} item as being a violation of Whirled standards. An agent will \
- review your report and take appropriate action.
+ review your report and take appropriate action. Please include in your comments any links \
+ necessary to validate the copyright or stolen claim.
 p.flag_kind = <Select>
 l.flag_kind = Flag as:
 l.flag_comment = Comment:
