Add a menu item to the flash game menu when playing an in-development game that allows you to remove the trophies that have been persisted from this in-development game.  They are also removed from the current PlayerObject.  There are no events available to the SDK related to trophy ownership, so developers that make use of this feature should simply be careful to not cache trophy ownership in their own code, but to always check with the API when they want to know if a given trophy is currently owned by the player or not.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -165,6 +165,9 @@ b.gameComment = Comment
 b.gameTrophies = Trophies
 b.gameInvite = Invite friends to play
 b.gameExit = Exit game
+b.gameRemoveTrophies = Remove development trophies
+
+m.trophies_removed = The trophies you had earned for this in-development game have been removed.
 
 #
 # TrophyPanel
