Don't show the controls until we have a piece of media. Show a little message instead.

--- a/rsrc/en_US/i18n/studio.properties
+++ b/rsrc/en_US/i18n/studio.properties
@@ -25,6 +25,7 @@ i.idle = Test idle action (if any)
 # Backdrop editor
 #
 t.backdrop_props = Backdrop Properties
+m.no_media = Upload or create the backdrop image/swf to configure the properties.
 l.room_type = Room type:
 m.room_normal = Interior
 m.room_no_walls = No walls
