Since we no longer have the "connecting to the game server" message in the lobby panel, let's add a standalone "connecting" message on a timer, so that we'll get /some/ feedback while the lobby is resolving.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -187,6 +187,9 @@ e.unknown_prize = Requested to award unknown prize "{0}".
 e.prize_creator_mismatch = The prize "{0}" cannot be awarded as it was created by a \
   different account than the one that created the game.
 
+e.waiting_for_lobby = Connecting to the game server...
+e.waiting_for_lobby_failed = Failed to connect to the game server!
+
 e.join_world_game_failed = Failed to join game: {0}
 e.leave_world_game_failed = Failed to leave game: {0}
 
