Display award notifications as real notifications so that they live on in the notification history. Also put a nice link in the trophy and prize notification that takes you to the appropriate GWT page. This also gets notifications out of chat where they cover up the game and generally make a nuisance out of themselves. Win win!

--- a/rsrc/en_US/i18n/notify.properties
+++ b/rsrc/en_US/i18n/notify.properties
@@ -17,24 +17,35 @@ m.friend_added = [{0}|command://ViewMember/{1}] is now your friend!
 m.friend_visit = [Visit|command://VisitMember/{0}].
 m.friend_removed = You are no longer friends with [{0}|command://ViewMember/{1}].
 m.invite_accepted = {0} just accepted your invitation! Your friend's display name is \
-[{1}|command://ViewMember//{2}].
+  [{1}|command://ViewMember//{2}].
+
 m.new_release_notes = There are new release notes. [View now|command://PopupNotifications].
 m.level_up = You have advanced to level {0}!
+
 m.new_mail.1 = You have new mail. [Check now|command://ViewMail].
 m.new_mail.n = You have {0} new mails. [Check now|command://ViewMail].
+
 m.game_invite = You have been invited by [{0}|command://ViewMember/{1}] to play {2}. \
-[Join their game!|command://JoinPlayerGame/{3}/{1}]
+  [Join their game!|command://JoinPlayerGame/{3}/{1}]
 m.follow_invite = You have been invited to follow [{0}|command://ViewMember/{1}]. You can \
-[accept and follow them|command://RespondFollow/{1}] or simply ignore this invitation.
+  [accept and follow them|command://RespondFollow/{1}] or simply ignore this invitation.
+
 m.room_commented = Your room [{0}|command://ViewRoom/{1}] has received a comment.
 m.profile_commented = Your [profile|command://ViewMember/{0}] has received a comment.
 m.item_commented = The {0} [{1}|command://ViewCommentedItem/{2}/{3}] has received a comment.
+
 m.friend_name_changed = "[{0}|command://ViewMember/{1}]" is {2}'s new name.
 m.friend_status_changed = [{0}|command://ViewMember/{1}] {2}.
+
 m.party_invite = Party invite: [{2}|command://JoinParty/{3}] from \
 [{0}|command://ViewMember/{1}]. [Details|command://GetPartyDetail/{3}].
 m.party_left = You have left the party. [Rejoin|command://JoinParty/{0}].
+
 m.song = Now playing: "{0}" by "{1}".
 
 m.money_gained = You have gained {0}.
 m.money_lost = {0} have been deducted.
+
+m.trophy_earned = You earned the [{0}|command://ViewTrophies/{1}] trophy!
+m.prize_earned = You were awarded a prize: [{0}|command://ViewStuff/{1}]!
+m.badge_awarded = You earned the [{0} Stamp|command://ViewPassport] and received {1} coins!
