- Removed old free-room service altogether. - Cleaned up the door-target panel, changed button to instead   open your rooms page. - Cleaned up some translation keys I spied.

--- a/rsrc/en_US/i18n/editing.properties
+++ b/rsrc/en_US/i18n/editing.properties
@@ -15,7 +15,7 @@
 #
 # RoomEditorPanel
 
-t.editor_title = Arranging Room:
+t.editor = Arranging Room:
 t.editing_no_name = (unnamed item)
 m.decor = Backdrop: {0}
 m.music = Music: {0}
@@ -26,7 +26,8 @@ i.room_button = Room properties
 i.move_button = Move object
 i.scale_button = Scale object
 i.prefs_button = Object settings
-i.namebox_tip = Select the item you want to edit. You can also click on items already in our room, and drag them around to rearrange them.
+i.namebox = Select the item you want to edit. You can also click on items already in our \
+    room, and drag them around to rearrange them.
 
 i.scale_down = Make this item smaller
 i.scale_up = Make this item larger
@@ -65,7 +66,9 @@ i.reset_scale = Restore this item to its original size
 i.reset_rotation = Restore this item to original orientation
 
 b.noscale = Disable perspective
-b.noscale_tip = When checked, this item will retain its pixel size on screen, no matter how far it is in the room. This is especially useful for toys that need to look the same regardless of room location.
+i.noscale = When checked, this item will retain its pixel size on screen, no matter how \
+  far it is in the room. This is especially useful for toys that need to look the same \
+  regardless of room location.
 
 # hotspot tooltips
 i.scaling = Click and drag to resize the item proportionally. Hold SHIFT to scale freely.
@@ -76,21 +79,20 @@ t.room_settings = Room properties
 t.item_prefs = Object properties
 t.item_action = Object action
 
-b.apply_changes = Apply
-b.revert_changes = Cancel
-
 # url editing
 
-t.url_dialog_title = New website link
+t.url_dialog = New website link
 l.enter_url = Enter the address of the website you want to link:
 l.urlTip = Tooltip (optional):
 
 # door editing 
 
 t.edit_door = Set door target
-l.edit_door_label = Go to a new room, and stand in the location where you want the door to lead. When ready, hit the button below.
-b.edit_door_ok = Set this location as target
-b.buy_room = Purchase a new room (free for now)
+m.edit_door = Navigate to the target room, stand in the location where you want the door \
+  to lead, and press the blue button. Note that you may lead to any room, anywhere in Whirled, \
+  even one you don't own!
+b.set_door = Set this location as target
+b.show_rooms = Show all my rooms (or buy a new one)
 
 l.axis = Axis:
 l.location = Location (x, y, z):
@@ -132,7 +134,8 @@ l.yscale = Y scale:
 l.action = Action:
 l.action_debug = Raw action string:
 l.ignore_mouse = Ignore mouse events
-l.ignore_mouse_tooltip = When checked, this object will ignore mouse events and pass them over to whatever happens to be behind it (other objects in the room, or the floor).
+i.ignore_mouse = When checked, this object will ignore mouse events and pass them \
+  over to whatever happens to be behind it (other objects in the room, or the floor).
 l.url = URL:
 l.help_tab = Help page definition:
 l.dest_scene = Destination room:
@@ -179,6 +182,5 @@ b.end_editing = Done; don't publish
 e.no_permission = You are unable to edit this room.
 e.failed_to_remove = Removal from old location failed: {0}
 t.item_used = Item already in use...
-b.item_used_yes = Yes
-b.item_used_no = No
-m.item_used = The {0} that you selected to add to this room is already in use.  Would you like to remove it from its current location, and use it here instead?
+m.item_used = The {0} that you selected to add to this room is already in use. \
+  Would you like to remove it from its current location, and use it here instead?
