--- a/rsrc/en_US/i18n/global.properties
+++ b/rsrc/en_US/i18n/global.properties
@@ -15,7 +15,10 @@
 # Common button translations
 b.ok = OK
 b.cancel = Cancel
+b.apply = Apply
 b.change = Change
+b.yes = Yes
+b.no = No
 
 # Common messages
 m.none = <none>
