--- a/rsrc/i18n/server.properties
+++ b/rsrc/i18n/server.properties
@@ -31,5 +31,6 @@ m.invite_accepted_body = The invitation that you sent to {0} has been \
 m.reply_subject = Re: {0}
 
 m.new_room_name = {0}'s Room
+m.new_room_door = {0}'s Home
 
 m.favorites_list_name = Favorites
