Allow permaguests to save their accounts and some other permaguest fixes * New logic call to save the usual registration information to a new account. * Refactored parts of account creation to be reused when saving a guest account * Account creation now passes along permaguestId field in the reg. info, causing saving instead of creating * Fixed bug where permaguest home rooms were called "tmp's room", also made "Guest" string i18n * Status panel rejigged for permaguests. No mail, no username, Sign Up instead of Sign Out * Me page redirects to account creation for permaguests * Account creation rejigged for permaguests.   * The logon panel is now at the bottom (we still need it in case of accidental permaguest cookies).   * The intro text is different because the 1000 coins have already been awarded * CShell method for detecting a permaguest * Fixed bug where permaguest anon email would show up in logon text box

--- a/rsrc/i18n/server.properties
+++ b/rsrc/i18n/server.properties
@@ -30,6 +30,7 @@ m.invite_accepted_body = The invitation that you sent to {0} has been \
 
 m.reply_subject = Re: {0}
 
+m.permaguest_name = Guest
 m.new_room_name = {0}'s Room
 m.new_room_door = {0}'s Home
 
