Translate m.no_such_place

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -33,6 +33,7 @@ l.warning_intro = A message from the Peas Keepers:
 m.warning_close_in = Can close in... {0}
 
 # Common aslib translations
+m.no_such_place = That room doesn't exist.
 m.lost_connection = The connection to the server was lost.
 m.idle_logoff = You have been logged off for being inactive.
 m.logon_failed = Logon failed: {0}
