Let's call it "Whirled", not "The Whirled".

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -13,8 +13,8 @@
 # x.foo = optional translation that may or may not be present
 
 # Reboot warning
-m.reboot_warning = Warning: The Whirled will restart in {0} minutes. {1}
-m.rebooting_now = The Whirled is now restarting.
+m.reboot_warning = Warning: Whirled will restart in {0} minutes. {1}
+m.rebooting_now = Whirled is now restarting.
 
 # Version checking
 m.min_flash_version = <html>Your Flash player must be upgraded.<br>You have version {0} but version {1} or greater is required.<br>Please go to <a href='http://www.adobe.com/'>http://www.adobe.com/</a> to upgrade your player.</html>
